Fixed issue #20